# jni-reflection

./: CMakeLists.txt
src/: jni-reflection.cpp  jni-reflection.h  utility.cpp  utility.h
